--- a/ui/assets/css/index.css
+++ b/ui/assets/css/index.css
@@ -18,34 +18,21 @@ li {
 .logo {
   width: 100px;
 }
-button {
-  cursor: pointer;
-}
-
-/** Custom Component Styles **/
 .btn {
-  background-color: #f4511e;
-  border: none;
   border-radius: 4px;
-  color: #ffffff;
-  cursor: pointer;
   display: inline-block;
-  font-size: 20px;
-  margin: 5px;
-  padding: 20px;
+  height: 45px;
+  min-width: 110px;
   text-align: center;
-  transition: all 0.5s;
-  width: 200px;
 }
-
+a.btn {
+  padding: 12px 25px;
+}
 .column {
   display: flex;
   justify-content: space-between;
 }
-
 .icon-circle {
-  width: 60px;
-  height: 60px;
   background: greenyellow;
   border-radius: 60px;
   color: #fffffa;
@@ -54,22 +41,13 @@ button {
   font-weight: 600;
   line-height: 60px;
   text-align: center;
+  width: 60px;
+  height: 60px;
 }
 
 /** Header Styles **/
-header {
-  box-shadow: 0px 4px 4px rgba(159, 155, 155, 0.25);
-}
 .navbar {
   display: flex;
-}
-.navbar-menu > li:last-child a {
-  border-left: 2px solid green;
-  color: red;
-  margin-left: 0.2rem;
-}
-.navbar-menu > li:last-child a:hover {
-  color: aqua;
 }
 .navbar-logo {
   padding: 12px 40px;
@@ -78,6 +56,14 @@ header {
   display: flex;
   margin-left: auto;
   padding: 0 40px;
+}
+.navbar-menu > li:last-child a {
+  border-left: 2px solid green;
+  color: red;
+  margin-left: 0.2rem;
+}
+.navbar-menu > li:last-child a:hover {
+  color: aqua;
 }
 .navbar-link {
   display: inline;
@@ -104,6 +90,17 @@ header {
   padding: 40px 80px;
   transition: all 0.7s ease-in-out;
 }
+.hero:after {
+  border: 10px solid;
+  border-color: #f9f9f9 transparent transparent;
+  bottom: 2vh;
+  content: "";
+  height: 0;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, 0);
+  width: 0;
+}
 .hero-title {
   font-size: 2.3em;
   margin-bottom: 30px;
@@ -114,9 +111,21 @@ header {
   margin-bottom: 40px;
   width: 75%;
 }
+.hero-callout {
+  margin-top: 10px;
+}
+.btn-home {
+  background: #f4511e;
+  color: #fffffa;
+  font-size: 1.5em;
+  text-align: center;
+  transition: all 0.5s;
+  width: 200px;
+}
 .btn-home span {
   cursor: pointer;
   display: inline-block;
+  padding: 0.5rem 0;
   position: relative;
   transition: 0.5s;
 }
@@ -125,7 +134,7 @@ header {
   opacity: 0;
   position: absolute;
   right: -20px;
-  top: 0;
+  top: 7px;
   transition: 0.5s;
 }
 .btn-home:hover span {
@@ -135,12 +144,11 @@ header {
   opacity: 1;
   right: 0;
 }
-
-/** Homepage Sections Styles **/
+/** Homepage Sections/Features Styles **/
 section {
-  padding: 40px;
   display: flex;
   flex-direction: column;
+  padding: 40px;
 }
 section > .btn {
   align-self: center;
@@ -150,16 +158,16 @@ section > .btn {
 }
 .section-title,
 .section-text {
-  position: relative;
   margin-bottom: 15px;
+  position: relative;
 }
-.section-title::after {
-  content: "";
-  position: absolute;
-  bottom: -3px;
-  left: 0;
-  width: 60px;
+.section-title:after {
   border: 1.5px solid green;
+  bottom: -3px;
+  content: "";
+  left: 0;
+  position: absolute;
+  width: 60px;
 }
 .features {
   display: flex;
@@ -168,8 +176,8 @@ section > .btn {
 .feature-item {
   flex-basis: 50%;
   flex-direction: column;
-  padding: 20px 50px;
   justify-content: start;
+  padding: 20px 50px;
 }
 .column .icon-circle {
   align-self: center;
@@ -177,9 +185,9 @@ section > .btn {
 }
 /** Featured Reports Styles **/
 .featured-reports {
-  margin-top: -50px;
   background: #dfe0e2;
   clip-path: polygon(0 10%, 100% 35%, 100% 100%, 0% 100%);
+  margin-top: -50px;
   padding-top: 110px;
 }
 .sectioned {
