--- a/ui/assets/css/signup.css
+++ b/ui/assets/css/signup.css
@@ -1,8 +1,10 @@
-@import 'reset.css';
+@import 'normalize.css';
 
-/* * {
-  border: 1px solid red;
-} */
+* {
+  transition-duration: 0.6s;
+  transition-property: all;
+  transition-timing-function: ease;
+}
 body {
   display: flex;
   flex-direction: column;
@@ -11,23 +13,45 @@ body {
 a {
   text-decoration: none;
 }
+input,
+button {
+  background: transparent;
+  border: 2px solid #0facf3;
+  border-radius: 4px;
+  font-size: 1em;
+  height: 45px;
+  margin: 0;
+  outline: none;
+  padding: 0 10px;
+  text-align: left;
+  text-decoration: none;
+}
 button {
   cursor: pointer;
+}
+label {
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+label span {
+  color: #ef271b;
+  font-size: 18px;
 }
 
 /** Header Styles **/
 header {
-  margin: 0 auto;
+  margin: 1rem auto;
   width: 7vw;
 }
 .logo {
-  height: 100%;
   object-fit: contain;
+  height: 100%;
   width: 100%;
 }
 
 /** Main Styles **/
 main {
+  align-items: center;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -37,6 +61,7 @@ main > p {
   text-align: center;
 }
 .section-header {
+  align-self: center;
   font-size: 24px;
   font-weight: 300;
   letter-spacing: -0.5px;
@@ -47,36 +72,43 @@ main > p {
   width: 45%;
 }
 .form-container {
-  box-shadow: 0px 4px 4px rgba(159, 155, 155, 0.25);
   display: flex;
   flex-direction: column;
   padding: 30px 20px;
-}
-label {
-  margin-bottom: 5px;
-  font-weight: 600;
-}
-label span {
-  color: #ef271b;
-  font-size: 18px;
-}
-input {
-  font-size: 0.9em;
-  height: 2.3em;
-  text-align: left;
-  border: 2px solid #0facf3;
-  border-radius: 3px;
-  padding: 0 10px;
-  background: transparent;
-  outline: none;
 }
 .form-element {
   margin-bottom: 15px;
 }
 .btn {
-  height: 42px;
-  border-radius: 3px;
-  display: inline-block;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+  height: 45px;
+  line-height: 45px;
   min-width: 110px;
+  position: relative;
   text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
 }
+.btn:hover {
+  text-decoration: none;
+}
+/* .btn-primary {
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: rgba(255, 255, 255, 0.5);
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+.btn-primary:hover {
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  text-shadow: 1px 1px 2px #427388;
+} */
